# DATCOM-TFM

./: .env.example  .gitignore  README.md  docker-compose.langfuse.yml  docker-compose.yml  pyproject.toml
demo/: agent.ipynb  streaming.ipynb
resources/algae_mock/: process.md  sensors.csv
src/: __init__.py  _studio_exports.py  config.py
src/agent/application/: consolidation_prompts.py  consolidation_use_case.py  consolidation_workflow.py  extraction_prompts.py  extraction_use_case.py  extraction_workflow.py
src/agent/domain/: exceptions.py  models.py  protocols.py
src/agent/domain/time/: __init__.py  delta.py  interval.py  statistic.py  unit.py
src/agent/infrastructure/: container.py  document_loaders.py  embeddings.py  llm.py  vector_stores.py
src/api/: __init__.py  main_app.py
src/api/application/: collection_service.py  consolidation_executor.py  consolidation_service.py  document_service.py  job_executor.py  processing_service.py  qdrant_sync_service.py  sensor_service.py
src/api/domain/: dtos.py  exceptions.py  models.py  protocols.py  schemas.py
src/api/infrastructure/: container.py  database.py  langfuse_client.py  logging.py  repositories.py  storage.py
src/api/routers/: collections.py  consolidation.py  documents.py  processing.py  rules.py  sensors.py
src/streaming/: __init__.py
src/streaming/application/: __init__.py  rule_checker.py
src/streaming/domain/: __init__.py  models.py  protocols.py
src/streaming/infrastructure/: __init__.py  buffered_status.py  event_sink.py  rule_loader.py
