[project]
name = "datcom-tfm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.13.0",
    "asyncpg>=0.29.0",
    "dependency-injector>=4.48.2",
    "docling>=2.61.1",
    "fastapi>=0.115.6",
    "greenlet>=3.2.4",
    "langchain>=1.0.5",
    "langchain-ollama>=1.0.0",
    "langchain-openai>=0.3.19",
    "langchain-qdrant>=1.0.0",
    "langchain-text-splitters>=0.3.0",
    "langgraph>=1.0.2",
    "langfuse>=2.55.3",
    "loguru>=0.7.2",
    "pandas>=2.2.0",
    "psycopg2-binary>=2.9.9",
    "pydantic>=2.12.4",
    "pydantic-settings>=2.9.1",
    "python-dotenv>=1.0.1",
    "python-multipart>=0.0.20",
    "qdrant-client>=1.11.3",
    "rich>=13.7.0",
    "sqlalchemy>=2.0.25",
    "uvicorn[standard]>=0.34.0",
    "websockets>=13.0",
    "langchain-deepseek>=1.0.0",
    "tavily-python>=0.7.12",
    "river>=0.21.0",
]

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
    "numpy>=1.26.0",
    "matplotlib>=3.8.0",
    "seaborn>=0.13.0",
]
